more garbage quality code

--- a/Hackathon/HTML/prototype.html
+++ b/Hackathon/HTML/prototype.html
@@ -14,7 +14,7 @@
     <title> Truthfool </title>
 
     <!style imports>
-    <link rel="stylesheet" href="../CSS/semantic.css">
+    <link rel="stylesheet" href="../Semantic/semantic.css">
     <link rel="stylesheet" href="../CSS/prototype.css">
 
     <!script imports>
